# gazel

./: .bazelignore  .bazelrc  .env.codesigning.example  .env.example  .gitignore  .npmrc  .pnp.cjs  BAZEL_EXECUTABLE_CONFIGURATION.md  BAZEL_SERVER_RUN_FIX.md  BAZEL_YARN_SETUP.md  BUILD.bazel  BZL_TS_CONSOLIDATION.md  CODE_SIGNING_SETUP.md  CONTRIBUTING.md  DEBUGGING_PACKAGED_APP.md  DEPENDENCY_GRAPH_USAGE.md  ELECTRON_BAZEL_SEPARATION.md  ELECTRON_BAZEL_SUCCESS.md  ELECTRON_FILE_ACCESS_FIX.md  ELECTRON_FINAL_SETUP.md  ELECTRON_FIXES_SUMMARY.md  ELECTRON_FORGE_VITE.md  ELECTRON_FORGE_VITE_RENDERER_ISSUE.md  ELECTRON_INTEGRATION.md  ELECTRON_INTEGRATION_SUMMARY.md  ELECTRON_SUCCESS.md  ELK_GRAPH_IMPLEMENTATION.md  ENTITLEMENTS_CONFIGURATION.md  EXAMPLE_USAGE.md  GETRULES_BY_FILE_REFACTOR.md  GITHUB_ACTIONS_SETUP_COMPLETE.md  GITHUB_ACTIONS_SIGNING.md  GRPC_METADATA_HEADERS.md  ICON_SETUP.md  ICON_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MACOS_DISTRIBUTION_READY.md  MIGRATION_COMPLETE.md  MODULE.bazel  (+31 more)
.github/: QUICK_SETUP.md  README.md  SECRETS_CHECKLIST.md  TROUBLESHOOTING.md  WORKFLOW_FIXES.md
.github/workflows/: build-macos.yml
app/: BUILD.bazel  README.md  example.html  package.json  tsconfig.json
assets/: README.md  icon.icns
bzl-ts/: BUILD.bazel  GENERATED_STUBS.md  README.md  example-usage.ts  example.ts  tsconfig.json  tsconfig.proto.json
bzl-ts/examples/: basic-build.ts  command-server.ts  electron-ipc-grpc.ts  event-streaming.ts  query-graph.ts  remote-execution.ts  simple-test.ts
bzl-ts/protos/: bazel_example.proto  my.proto
bzl-ts/protos/bazel/: analysis_v2.proto
bzl-ts/scripts/: fetch-protos.sh  generate-simple-stubs.cjs  generate-stubs.js
bzl-ts/src/: cli.ts  client.ts  generator.ts  index.ts
bzl-ts/src/services/: build-event-service.ts  command-server.ts  file-watcher.ts  query-service.ts  remote-execution.ts
bzl-ts/src/transports/: electron-ipc-client.ts  electron-ipc-transport.d.ts  electron-ipc-transport.ts
bzl-ts/src/utils/: debounce.ts
client/: App.svelte  BUILD.bazel  IPC_STREAMING.md  client.impl.ts  client.ipc.ts  client.ts  client.web.ts  global.d.ts  index.html  main.ts  package.json  postcss.config.js  tailwind.config.js  test-grpc.html  test-streaming.html  tsconfig.json  vite-env.d.ts  vite.config.ts
client/components/: AttributesDisplay.svelte  BazelStatus.svelte  BuildPanel.svelte  CopyButton.svelte  CustomNode.svelte  DependencyGraph.svelte  ElkDependencyGraph.svelte  ElkModuleGraph.svelte  EnhancedDependencyGraph.svelte  Loader.svelte  RunModal.svelte  Settings.svelte  SplashScreen.svelte  TargetActions.svelte  TargetDetails.svelte  TargetItem.svelte  TargetTreeView.svelte  TreeNode.svelte  TypeSelector.svelte  WorkspacePicker.svelte  intersect.ts  observer.ts  target-util.test.ts  target-util.ts  util.ts
client/lib/: index.ts  metadata-interceptor.ts  navigation.ts  rules-registry.ts  storage.ts
client/lib/api/: client-connect.ts  client.ts  connect-client.ts  grpc-client.ts
client/lib/components/: TargetDetails.svelte
client/routes/: Commands.svelte  DependencyGraph.svelte  Files.svelte  Modules.svelte  Query.svelte  Targets.svelte  TestEnhanced.svelte  Workspace.svelte
docs/: electron-ipc-integration.md  grpc-direct-integration.md  grpc-generated-client-integration.md  grpc-integration-complete.md  grpc-over-ipc-architecture.md  ipc-integration-setup.md  streamJsonProto-README.md  streamJsonProto-integration-example.md  streamJsonProto.md  streaming-api.md
electron/: BUILD.bazel  CALLBACK_STREAMING_EXAMPLE.md  README.md  SOLUTION_SUMMARY.md  STREAM_MANAGER_USAGE.md  STREAM_RECONSTRUCTION.md  bundle.js  bundler.js  bundler.py  bundler.sh  bundler_wrapper.sh  client.ipc.ts  compile-and-bundle.sh  dev-bazel.sh  dev.sh  electron-ipc-transport-v2.ts  electron-ipc-transport.ts  electron-launcher.mjs  electron.bzl  entitlements.plist  forge.config.cjs  forge.config.ts  index-app.html  index.html  ipc-transport.ts  launcher.sh  load-app.js  main.cjs  main.js  main.ts  package-lock.json  package.json  pnpm-lock.yaml  preload.cjs  preload.js  preload.ts  prepare-app.py  renderer.ts  run.sh  run.sh.tpl  (+9 more)
electron-app/: BAZEL_ELECTRON_APPROACH.md  BUILD.bazel  README.md  electron-forge-wrapper.mjs  main.js  package.json  run.sh.tpl  vite.main.config.mjs
electron/services/: gazel-service.js
example-bazel-workspace/: MODULE.bazel
example-bazel-workspace/app/: BUILD.bazel  analyzer.py  hello.sh  process_data.sh
example-bazel-workspace/lib/: BUILD.bazel
proto/: BUILD.bazel  README.md  buf.gen.yaml  buf.yaml  build.proto  fetch-protos.sh  gazel.proto  gazel_pb.d.ts  index.ts  logging.proto  logging_pb.d.ts  package.json  pnpm-lock.yaml  tsconfig.json
samples/: graph-app:main.xml  graph-deps.xml  mod_graph--output.json  module.json  query-app:main.streamed_jsonproto.json  target-streamedjson-proto.json
scripts/: generate-icons.sh
server/: BUILD.bazel  IMPLEMENTATION.md  config.ts  connect-example.ts  connect-server.ts  connect-service.ts  gazel-connect-routes.ts  grpc-server.ts  index.ts  loader.ts  logging.ts  main.ts  metadata-interceptor.ts  package.json  pnpm-lock.yaml  searchTargets.test.ts  server.ts  test-server.ts  tsconfig.json
server/routes/: commands.ts  connect.ts  files.ts  modules.ts  query.ts  stream.ts  targets.ts  workspace.ts
server/services/: bazel.ts  enhancedXmlParser.ts  parser.ts  testEnhancedParser.ts  xmlStreamParser.test.ts  xmlStreamParser.ts
server/src/: grpc-web-server.ts  standalone-server.ts
server/types/: index.ts
server/utils/: STREAM_UTIL_IMPROVEMENTS.md  console-styles.ts  stream-util.test.ts  stream-util.ts
src/: App.svelte
src/components/: EnhancedDependencyGraph.svelte  WorkspacePicker.svelte
src/lib/: storage.ts
src/lib/api/: client.ts
src/lib/components/: CopyButton.svelte  TypeSelector.svelte
src/lib/types/: index.ts
src/lib/utils/: xmlParser.ts
src/routes/: Commands.svelte  DependencyGraph.svelte  Files.svelte  Query.svelte  Targets.svelte  Workspace.svelte
tools/: BUILD.bazel  electron.bzl  typescript.bzl
